--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -123,3 +123,8 @@ button {
   border: 5px solid rebeccapurple;
   border-radius: 5px;
 }
+
+.scroll {
+  text-align: center;
+  margin-top: -20px;
+}
